fixing caching and input z-index

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ button:hover{
 .addSong #addSongInput{
   background-color: black;
   color:orange;
-  z-index: -1;
 
   outline: none;
    border: none;
@@ -102,9 +101,6 @@ button:hover{
 }
 .addSong #addSongPlus{
   color: orange;
-}
-.addSong span:hover{
-
 }
 
 
